# MRFStr

./: .gitignore  Benchmark.md  CMakeLists.txt  PFOrder.md  README.md  mrfstr.h  mrtstr.h  msvcsetup.c  test.c  test.py  winsetup.c
.github/workflows/: cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  blib.h  contain_chr.c  count_chr.c  equal.c  remove.c  repeat.c  repeat_chr.c  replace_chr.c  reverse.c  set.c  strlen.c
config/: avx.c  avx512.c  base.c  binary.c  config.c  sse.c
core/: scontchr.S  scontchr.asm  scopy.S  scopy.asm  scountchr.S  scountchr.asm  sequal.S  sequal.asm  sfill.S  sfill.asm  sfindchr.S  sfindchr.asm  sreplchr.S  sreplchr.asm  srev.S  srev.asm  sstrlen.S  sstrlen.asm
cpuid/: cacheline.S  cacheline.asm  cachesize.S  cachesize.asm  cpuid.h  cputype.S  cputype.asm  funccnt.S  funccnt.asm  get_cputype.S  get_cputype.asm  get_proccnt.S  get_proccnt.asm  get_simdset.S  get_simdset.asm  proccnt.S  proccnt.asm  simdset.S  simdset.asm
docs/: init.md  main.md
docs/funcs/: concat.md  init.md  setget.md
fsrcs/: cmp.c  concat.c  contain.c  file.c  find.c  init.c  intern.c  io.c  memchr.c  memcmp.c  memcpy.c  memset.c  repeat.c  replace.c  reverse.c  set.c  util.c
heads/: alloc.h  avx.h  avx512.h  base.h  binary.h  cpuid.h  mrfstr-intern.h  mrtstr-intern.h  simd.h  sse.h
proc/: cmp.c  contain.c  contain_chr.c  contchr.c  copy.c  countchr.c  equal.c  fill.c  find_chr.c  findchr.c  memchr.c  memcmp.c  move.c  replace_chr.c  replchr.c  rev.c  reverse.c
srcs/: alloc.c  cmp.c  concat.c  config.c  contain.c  count_chr.c  data.c  equal.c  find.c  get.c  init.c  io.c  memchr.c  memcmp.c  memcpy.c  memset.c  remove.c  repeat.c  replace.c  replace_chr.c  reverse.c  set.c  str.c
ssrcs/: cmp.c  contain.c  init.c  repeat.c  set.c  util.c
tests/: CMakeLists.txt  concat.c  contain_chr.c  count_chr.c  equal.c  find_chr.c  insert.c  mrfstr_set.c  remove.c  repeat.c  repeat_chr.c  replace.c  replace_chr.c  reverse.c  set.c  strlen.c  tlib.h
tsrcs/: bres.c  cmp.c  contain.c  init.c  intern.c  memchr.c  memcmp.c  memcpy.c  memset.c  repeat.c  set.c  thread.c  util.c
